# brettapps789

./: .env.example  .gitignore  AAW_MANIFEST.md  README.md  Sovereign_Aussie_AI_Agent_Workflows_Full.md  agent_mindmap.mmd  ai_driven_cybersecurity_for_small_businesses_sales_page.html  ai_in_sustainable_agriculture_practices_sales_page.html  ai_powered_home_automation_for_accessibility_sales_page.html  automating_small_business_workflows_with_mcp_serve_sales_page.html  build.json  dependency_lock.txt  low_code_automation_for_small_business_optimizatio_sales_page.html  metadata.json  orchestrator.py  package-lock.json  package.json  test-epub.ts  test.epub  test_workflow.py  tsconfig.tsbuildinfo  wire_scaffold.mmd
.github/agents/: my-agent.agent.md
.github/workflows/: deploy.yml
agents/: aaw-analytics-agent.md  aaw-cicd-agent.md  aaw-deployment-agent.md  aaw-design-agent.md  aaw-editing-agent.md  aaw-fact-checking-agent.md  aaw-formatting-agent.md  aaw-integration-agent.md  aaw-market-analysis-agent.md  aaw-research-agent.md  aaw-seo-agent.md  aaw-testing-agent.md  aaw-web-dev-agent.md  aaw-writing-agent.md  analyst_agent.py  manager_agent.py  writer_agent.py
app/: layout.tsx  page.tsx
app/api/chat/: route.ts
sample_files/: page_template.html  project_info.txt  project_state.json  todos.md
sovereign-aussie-market-research-agent/: .env.example  .gitignore  README.md  pyproject.toml
sovereign-aussie-market-research-agent/config/: business_context.json
sovereign-aussie-market-research-agent/src/: __init__.py  agent_logic.py  server.py
sovereign-aussie-market-research-agent/src/tools/: __init__.py  competitors.py  market_trends.py  pricing.py
utils/: google_workspace.py  stripe_api.py  vertex_ai.py
