[project]
name = "sovereign-aussie-market-research-agent"
version = "1.0.0"
description = "Market Research Bruce – Sovereign MCP Server for Australian publishing market intelligence"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Brett Sjoberg", email = "brett@fairdinkumpublishing.com.au" }
]
keywords = ["mcp", "market-research", "publishing", "australia", "kdp"]

dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pytrends>=4.9.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
